--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "0afa4c87-e77d-4ff7-b8a0-f0c262c42cdc"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
